--- a/templates/cassandra.yaml.j2
+++ b/templates/cassandra.yaml.j2
@@ -1320,7 +1320,7 @@ server_encryption_options:
   #     dc   : Encrypt connections to peers in other datacenters but not within datacenters
   #     rack : Encrypt connections to peers in other racks but not within racks
   #     all  : Always use encrypted connections
-  internode_encryption: none
+  internode_encryption: all
   # When set to true, encrypted and unencrypted connections are allowed on the storage_port
   # This should _only be true_ while in unencrypted or transitional operation
   # optional defaults to true if internode_encryption is none
@@ -1329,23 +1329,23 @@ server_encryption_options:
   # during upgrade to 4.0; otherwise, set to false.
   legacy_ssl_storage_port_enabled: false
   # Set to a valid keystore if internode_encryption is dc, rack or all
-  keystore: conf/.keystore
-  keystore_password: cassandra
+  keystore: {{ ansible_role_cassandra_keystore }}
+  keystore_password: {{ ansible_role_cassandra_keystore_password }}
   # Configure the way Cassandra creates SSL contexts.
   # To use PEM-based key material, see org.apache.cassandra.security.PEMBasedSslContextFactory
-  # ssl_context_factory:
-  #     # Must be an instance of org.apache.cassandra.security.ISslContextFactory
-  #     class_name: org.apache.cassandra.security.DefaultSslContextFactory
+  ssl_context_factory:
+    # Must be an instance of org.apache.cassandra.security.ISslContextFactory
+    class_name: org.apache.cassandra.security.DefaultSslContextFactory
   # Verify peer server certificates
   require_client_auth: false
   # Set to a valid trustore if require_client_auth is true
-  truststore: conf/.truststore
-  truststore_password: cassandra
+  truststore: {{ ansible_role_cassandra_truststore }}
+  truststore_password: {{ ansible_role_cassandra_truststore_password }}
   # Verify that the host name in the certificate matches the connected host
   require_endpoint_verification: false
   # More advanced defaults:
-  # protocol: TLS
-  # store_type: JKS
+  protocol: TLSv1.3
+  store_type: {{ ansible_role_cassandra_keystore_type }}
   # cipher_suites: [
   #   TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,
   #   TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,
@@ -1367,27 +1367,27 @@ server_encryption_options:
 # auth set require_client_auth=true. Restart all nodes
 client_encryption_options:
   # Enable client-to-server encryption
-  enabled: false
+  enabled: true
   # When set to true, encrypted and unencrypted connections are allowed on the native_transport_port
   # This should _only be true_ while in unencrypted or transitional operation
   # optional defaults to true when enabled is false, and false when enabled is true.
-  # optional: true
+  optional: false
   # Set keystore and keystore_password to valid keystores if enabled is true
-  keystore: conf/.keystore
-  keystore_password: cassandra
+  keystore: {{ ansible_role_cassandra_keystore }}
+  keystore_password: {{ ansible_role_cassandra_keystore_password }}
   # Configure the way Cassandra creates SSL contexts.
   # To use PEM-based key material, see org.apache.cassandra.security.PEMBasedSslContextFactory
-  # ssl_context_factory:
-  #     # Must be an instance of org.apache.cassandra.security.ISslContextFactory
-  #     class_name: org.apache.cassandra.security.DefaultSslContextFactory
+  ssl_context_factory:
+    # Must be an instance of org.apache.cassandra.security.ISslContextFactory
+    class_name: org.apache.cassandra.security.DefaultSslContextFactory
   # Verify client certificates
   require_client_auth: false
   # Set trustore and truststore_password if require_client_auth is true
-  # truststore: conf/.truststore
-  # truststore_password: cassandra
+  truststore: {{ ansible_role_cassandra_truststore }}
+  truststore_password: {{ ansible_role_cassandra_truststore_password }}
   # More advanced defaults:
-  # protocol: TLS
-  # store_type: JKS
+  protocol: TLSv1.3
+  store_type: {{ ansible_role_cassandra_keystore_type }}
   # cipher_suites: [
   #   TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,
   #   TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,
